1998-04-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActionCache.m ([ActionCache -createProcCtrl]): Use
	addButtonName:method: instead of addButtonName:actionName:.

1998-04-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtoolsgui.h: Add comment tags with documentation.

1998-04-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* GUISwarm.m: Don't include simtoolsgui/ControlPanel.h
	or simtools.h.

1998-04-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeDisplay.m (notifyObjectDropped): Call markForDrop instead
	of drop.

1998-03-20  Alex Lancaster  <alex@santafe.edu>

	* ControlPanel.m: ([ControlPanel -startInActivity:]): If
	controlState is ControlStateStopped and this ControlPanel has been
	started within an activity - just return the state to exit from
	the while loop.  This allows nested observerSwarms.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtoolsgui.m: Include objectbase/Arguments.h instead of
	simtools/global.h.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CompleteProbeDisplay.m ([CompleteProbeDisplay -drop]): Don't
	call disableDestroyNotification for topLevel.  Note that markDrop
	in superclass (CommonProbeDisplay) should take care of it.

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -drop]): Likewise.

	* Makefile:  New file.

	* ActionCache.[hm], ActionHolder.[hm], ActiveGraph.[hm],
	ClassDisplayWidget.[hm], CommonProbeDisplay.[hm],
	CompleteProbeDisplay.[hm], ControlPanel.[hm], GUIComposite.[hm],
	GUISwarm.[hm], MessageProbeWidget.[hm], ProbeDisplay.[hm],
	ProbeDisplayManager.[hm], SimpleProbeDisplay.[hm],
	VarProbeWidget.[hm], simtools.[hm], global.h: Moved from simtools.
